tests/snapshots/integration_tests__fallback_chain_to_german.snap
---
source: tests/lib.rs
expression: string
---
<!doctype html>
<html class="no-js" lang="">
  <head>
    <meta charset="utf-8" />
    <meta http-equiv="x-ua-compatible" content="ie=edge" />
    <title>  Wettkämpfe  </title>
    <meta name="description" content="" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
    <link rel="stylesheet" href="/assets/simple.min.css" />
    <link rel="stylesheet" href="/assets/custom.css" />
    <!-- Place favicon.ico in the root directory -->
  </head>
  <body>
    <header>
      <h1> Wettkämpfe </h1>
    </header>
    <main>
<ul>
  
</ul>
</main>
  </body>
   
</html>
